# CTFG-Wikidata

./: README.md  manual_deployments.md  pyproject.toml  sync.py
.github/workflows/: pull-request.yml  python-app.yml  sync.yml
cache/: .gitignore
src/: config.py  ctfg.py  sync.py  util.py  wiki.py
