[project]
name = "ctfg-wikidata"
version = "0.1.0"
description = "Data integrator between the Civic Tech Field Guide and Wikidata (Wikipedia)."
authors = [
    {name = "Tim Eccleston"}
]
readme = "README.md"
requires-python = "<4.0,>=3.13"
dependencies = [
    "wikibaseintegrator (>=0.12.12,<0.13.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipython = "^9.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
