[project]
name = "ctfg-wikidata"
version = "0.1.0"
description = "Data integrator between the Civic Tech Field Guide and Wikidata (Wikipedia)."
authors = [
    {name = "Tim Eccleston"}
]
readme = "README.md"
requires-python = "<4.0,>=3.13"
dependencies = [
    "wikibaseintegrator @ git+https://github.com/LeMyst/WikibaseIntegrator.git@301067883ddce0bca31fdd54973c3d6c8cbbcb7d",
    "pyairtable (>=3.1.1,<4.0.0)",
    "more_itertools"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipython = "^9.2.0"
dotenv = "^0.9.9"
black = "^25.1.0"
mypy = "^1.17.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
